# rust-svelte-auth

./: README.md
backend/: Cargo.toml
backend/migrations/: 20230911115059_users_table.up.sql
backend/settings/: base.yaml  development.yaml  production.yaml
backend/src/: lib.rs  main.rs  settings.rs  startup.rs
backend/src/routes/: health.rs  mod.rs
backend/src/routes/users/: confirm_registration.rs  register.rs
backend/src/types/: general.rs  mod.rs
backend/src/utils/: emails.rs  mod.rs
backend/src/utils/auth/: password.rs  tokens.rs
