[package]
name = "backend"
version = "0.1.0"
author="seilylook"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = "4"
config = { version = "0.13.3", features = ["yaml"] }
deadpool-redis = "0.12.0"
dotenv = "0.15.0"
serde = "1.0.160"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
